# plugify-plugin-dynhook

./: CHANGELOG.md  CMakeLists.txt  plugify-plugin-dynhook.pplugin.in
.github/workflows/: cmake-multiple-platform.yml
conda/: bld.bat  build.sh  meta.yaml.example
src/: plugin.cpp
